@@ -12,6 +12,9 @@ master
  - use obspy read_inventory() and Inventory/Response objects internally for
    all metadata, regardless of source (see #77)
  - reimplement AR picker (see #75)
+ - make reference time given on command line the zero-time on time axis always
+   (so far if an offset was given the zero time was equal to reference time
+   plus offset, see #78)
 
 0.5.1
  - fix getting metadata via arclink (see #65)
